--- a/.github/workflows/Arthur&Athena-OpenWrt.yml
+++ b/.github/workflows/Arthur&Athena-OpenWrt.yml
@@ -8,7 +8,7 @@ on:
     - cron: '0 16 * * 4'
   # 清理后触发
   workflow_run:
-    workflows: ["Auto_Cleanup"]
+    workflows: ["All-Clean"]
     types:
       - completed
 
