--- a/.github/workflows/Arthur&Athena-ImmortalWrt.yml
+++ b/.github/workflows/Arthur&Athena-ImmortalWrt.yml
@@ -13,7 +13,7 @@ on:
       - completed
 
 env:
-  REPO_URL: https://github.com/laipeng668/openwrt.git  
+  REPO_URL: https://github.com/laipeng668/immortalwrt.git
   REPO_BRANCH: master
   CONFIG_FILE: configs/Arthur&Athena.config
   GENERAL_CONFIG_FILE: configs/General.config
