--- a/.github/workflows/Arthur&Athena-OpenWrt.yml
+++ b/.github/workflows/Arthur&Athena-OpenWrt.yml
@@ -1,4 +1,4 @@
-name: Arthur&Athena-OpenWrt
+name: Arthur&Athena-ImmWrt
 
 on:
   # 手动触发
@@ -19,7 +19,7 @@ env:
   GENERAL_CONFIG_FILE: configs/General.config
   DIY_SCRIPT: scripts/Roc-script.sh
   CLASH_KERNEL: amd64
-  MADS: false
+  MADS: true
   UPLOAD_BIN_DIR: false
   FIRMWARE_RELEASE: true
   FIRMWARE_TAG: Arthur&Athena
@@ -61,11 +61,11 @@ jobs:
           echo "内存信息获取失败 \n"
         fi
         
-        echo "--------------------------硬盘信息--------------------------"
-        # Safely get disk count
-        # 安全地获取硬盘数量
-        DISK_COUNT=$(ls /dev/sd* 2>/dev/null | grep -v [1-9] | wc -l)
-        echo "硬盘数量：$DISK_COUNT" && df -hT
+        #echo "--------------------------硬盘信息--------------------------"
+        ## Safely get disk count
+        ## 安全地获取硬盘数量
+        #DISK_COUNT=$(ls /dev/sd* 2>/dev/null | grep -v [1-9] | wc -l)
+        #echo "硬盘数量：$DISK_COUNT" && df -hT
 
     - name: Maximize Available Disk Space(最大化可用磁盘空间​)
       if: env.MADS == 'true'
@@ -79,6 +79,7 @@ jobs:
         remove-large-packages: "true"
         remove-cached-tools: "true"
         remove-swapfile: "true"
+
 
     - name: Initialization Environment(初始化环境)
       env:
@@ -229,7 +230,7 @@ jobs:
         
         # Merge configuration files
         # 合并配置文件
-        cat "$CONFIG_FILE" "$GENERAL_CONFIG_FILE" > "$OPENWRT_PATH/.config" || { echo "Config merge failed"; exit 1; }
+        awk '!seen[$0]++' $CONFIG_FILE $GENERAL_CONFIG_FILE > $OPENWRT_PATH/.config || { echo "Config merge failed"; exit 1; }
         
         # Set custom script permissions and execute
         # 设置自定义脚本权限并执行
@@ -392,7 +393,7 @@ jobs:
         body: |
           **This is OpenWrt Firmware for ${{ env.FIRMWARE_TAG }}**
           ### 📒 固件信息
-          - 这是开启全功能NSS的6.12内核固件，默认主题为Argon；该固件在OpenWrt的基础上，添加了额外的软件包，具体详见对应机型的config。
+          - 这是开启全功能NSS的6.12内核固件，默认主题为Argon；该固件在ImmortalWrt的基础上，添加了额外的软件包，具体详见对应机型的config。
           - 💻 这是 ${{ env.FIRMWARE_TAG }} 平台使用的 OpenWrt 固件
           - ⚽ 固件源码: ${{ env.REPO_URL }}
           - 💝 源码分支: ${{ env.REPO_BRANCH }}
