--- a/.github/workflows/Arthur&Athena-LibWrt.yml
+++ b/.github/workflows/Arthur&Athena-LibWrt.yml
@@ -61,11 +61,11 @@ jobs:
           echo "内存信息获取失败 \n"
         fi
         
-        echo "--------------------------硬盘信息--------------------------"
-        # Safely get disk count
-        # 安全地获取硬盘数量
-        DISK_COUNT=$(ls /dev/sd* 2>/dev/null | grep -v [1-9] | wc -l)
-        echo "硬盘数量：$DISK_COUNT" && df -hT
+        #echo "--------------------------硬盘信息--------------------------"
+        ## Safely get disk count
+        ## 安全地获取硬盘数量
+        #DISK_COUNT=$(ls /dev/sd* 2>/dev/null | grep -v [1-9] | wc -l)
+        #echo "硬盘数量：$DISK_COUNT" && df -hT
 
     - name: Maximize Available Disk Space(最大化可用磁盘空间​)
       if: env.MADS == 'true'
@@ -79,6 +79,7 @@ jobs:
         remove-large-packages: "true"
         remove-cached-tools: "true"
         remove-swapfile: "true"
+
 
     - name: Initialization Environment(初始化环境)
       env:
@@ -229,7 +230,7 @@ jobs:
         
         # Merge configuration files
         # 合并配置文件
-        cat "$CONFIG_FILE" "$GENERAL_CONFIG_FILE" > "$OPENWRT_PATH/.config" || { echo "Config merge failed"; exit 1; }
+        awk '!seen[$0]++' $CONFIG_FILE $GENERAL_CONFIG_FILE > $OPENWRT_PATH/.config || { echo "Config merge failed"; exit 1; }
         
         # Set custom script permissions and execute
         # 设置自定义脚本权限并执行
