--- a/configs/General.config
+++ b/configs/General.config
@@ -41,6 +41,9 @@ CONFIG_PACKAGE_unzip=y
 CONFIG_PACKAGE_zoneinfo-asia=y
 CONFIG_PACKAGE_zram-swap=y
 
+# === 编译ruby报错尝试禁用 ===
+CONFIG_PACKAGE_ruby=n
+
 # === 原第三方包 ===
 #CONFIG_PACKAGE_adguardhome=y
 #CONFIG_PACKAGE_ariang=y
